--- a/script/tutorial/climada_entity_DiscRates.ipynb
+++ b/script/tutorial/climada_entity_DiscRates.ipynb
@@ -22,14 +22,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-01-30 20:15:26,873 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
+      "2019-03-29 18:23:10,316 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/aznarsig/anaconda3/envs/climada_env_new/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "/Users/aznarsig/anaconda3/envs/climada_env/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n"
      ]
     },
@@ -228,7 +228,7 @@
      "data": {
       "text/plain": [
        "(<Figure size 288x288 with 1 Axes>,\n",
-       " [<matplotlib.axes._subplots.AxesSubplot at 0x1a204c94e0>])"
+       " [<matplotlib.axes._subplots.AxesSubplot at 0x1a28af3668>])"
       ]
      },
      "execution_count": 3,
@@ -308,7 +308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-01-30 20:15:29,943 - climada.util.save - INFO - Written file /Users/aznarsig/Documents/Python/climada_python/script/tutorial/results/tutorial_disc.p\n"
+      "2019-03-29 18:23:15,693 - climada.util.save - INFO - Written file /Users/aznarsig/Documents/Python/climada_python/script/tutorial/results/tutorial_disc.p\n"
      ]
     }
    ],
