--- a/script/tutorial/climada_hazard_Hazard.ipynb
+++ b/script/tutorial/climada_hazard_Hazard.ipynb
@@ -40,22 +40,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-06 07:52:49,640 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
+      "2019-03-29 18:37:38,141 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/aznarsig/anaconda3/envs/climada_env_new/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "/Users/aznarsig/anaconda3/envs/climada_env/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2019-03-06 07:52:51,687 - climada.util.checker - DEBUG - Centroids.region_id not set. \n"
      ]
     }
    ],
@@ -84,15 +77,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening file /Users/aznarsig/Documents/Python/climada_python/data/demo/SC22000_VE__M1.grd.gz\n",
-      "2019-03-06 07:52:55,263 - climada.util.checker - DEBUG - Centroids.region_id not set. \n"
+      "Opening file /Users/aznarsig/Documents/Python/climada_python/data/demo/SC22000_VE__M1.grd.gz\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "(<Figure size 648x936 with 2 Axes>,\n",
-       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a20c184a8>]],\n",
+       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a1f56a940>]],\n",
        "       dtype=object))"
       ]
      },
@@ -314,7 +306,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-06 07:53:29,380 - climada.hazard.base - INFO - Computing exceedance intenstiy map for return periods: [ 10  50  75 100]\n"
+      "2019-03-29 18:38:11,869 - climada.hazard.base - INFO - Computing exceedance intenstiy map for return periods: [ 10  50  75 100]\n"
      ]
     },
     {
@@ -443,15 +435,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2019-03-06 07:53:49,783 - climada.util.checker - DEBUG - Centroids.region_id not set. \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "haz_tc_fl.write_hdf5('results/haz_tc_fl.h5')\n",
     "\n",
@@ -476,7 +460,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-06 07:53:49,800 - climada.util.save - INFO - Written file /Users/aznarsig/Documents/Python/climada_python/script/tutorial/results/tutorial_haz_tc_fl.p\n"
+      "2019-03-29 18:38:29,583 - climada.util.save - INFO - Written file /Users/aznarsig/Documents/Python/climada_python/script/tutorial/results/tutorial_haz_tc_fl.p\n"
      ]
     }
    ],
