correct and add missing file

--- a/script/applications/eca_san_salvador/San_Salvador_Risk.ipynb
+++ b/script/applications/eca_san_salvador/San_Salvador_Risk.ipynb
@@ -17,7 +17,7 @@
      "output_type": "stream",
      "text": [
       "Importing Jupyter notebook from functions_ss.ipynb\n",
-      "2019-04-03 18:06:15,665 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
+      "2019-04-03 19:41:19,339 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
      ]
     },
     {
@@ -32,15 +32,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-04-03 18:06:21,342 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
-      "2019-04-03 18:06:21,418 - climada.entity.exposures.base - INFO - crs set to default value: {'init': 'epsg:4326'}\n",
-      "2019-04-03 18:06:21,419 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
-      "2019-04-03 18:06:21,419 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
-      "2019-04-03 18:06:21,420 - climada.entity.exposures.base - INFO - centr_ not set.\n",
-      "2019-04-03 18:06:21,421 - climada.entity.exposures.base - INFO - category_id not set.\n",
-      "2019-04-03 18:06:21,422 - climada.entity.exposures.base - INFO - region_id not set.\n",
-      "2019-04-03 18:06:21,885 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n",
-      "2019-04-03 18:06:24,949 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n"
+      "2019-04-03 19:41:26,237 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
+      "2019-04-03 19:41:26,315 - climada.entity.exposures.base - INFO - crs set to default value: {'init': 'epsg:4326'}\n",
+      "2019-04-03 19:41:26,316 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
+      "2019-04-03 19:41:26,317 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
+      "2019-04-03 19:41:26,317 - climada.entity.exposures.base - INFO - centr_ not set.\n",
+      "2019-04-03 19:41:26,319 - climada.entity.exposures.base - INFO - category_id not set.\n",
+      "2019-04-03 19:41:26,320 - climada.entity.exposures.base - INFO - region_id not set.\n",
+      "2019-04-03 19:41:26,760 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n",
+      "2019-04-03 19:41:29,324 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n"
      ]
     }
    ],
@@ -245,15 +245,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-04-03 18:06:26,236 - climada.entity.exposures.base - INFO - crs set to default value: {'init': 'epsg:4326'}\n",
-      "2019-04-03 18:06:26,237 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
+      "2019-04-03 19:41:30,751 - climada.entity.exposures.base - INFO - crs set to default value: {'init': 'epsg:4326'}\n",
+      "2019-04-03 19:41:30,751 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
       " Description: \n",
-      "2019-04-03 18:06:26,238 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
-      "2019-04-03 18:06:26,238 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
-      "2019-04-03 18:06:26,239 - climada.entity.exposures.base - INFO - centr_ not set.\n",
-      "2019-04-03 18:06:26,240 - climada.entity.exposures.base - INFO - category_id not set.\n",
-      "2019-04-03 18:06:26,241 - climada.entity.exposures.base - INFO - region_id not set.\n",
-      "2019-04-03 18:06:26,242 - climada.entity.exposures.base - INFO - geometry not set.\n"
+      "2019-04-03 19:41:30,752 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
+      "2019-04-03 19:41:30,753 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
+      "2019-04-03 19:41:30,754 - climada.entity.exposures.base - INFO - centr_ not set.\n",
+      "2019-04-03 19:41:30,755 - climada.entity.exposures.base - INFO - category_id not set.\n",
+      "2019-04-03 19:41:30,756 - climada.entity.exposures.base - INFO - region_id not set.\n",
+      "2019-04-03 19:41:30,757 - climada.entity.exposures.base - INFO - geometry not set.\n"
      ]
     },
     {
@@ -455,7 +455,7 @@
      "data": {
       "text/plain": [
        "(<Figure size 288x288 with 1 Axes>,\n",
-       " [<matplotlib.axes._subplots.AxesSubplot at 0x1a27b62908>])"
+       " [<matplotlib.axes._subplots.AxesSubplot at 0x1a1bf82fd0>])"
       ]
      },
      "execution_count": 6,
@@ -517,7 +517,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-04-03 18:06:27,323 - climada.hazard.centroids.base - INFO - Reading file: Salvador_hazard_FL_2015.mat\n"
+      "2019-04-03 19:41:31,889 - climada.hazard.centroids.base - INFO - Reading file: Salvador_hazard_FL_2015.mat\n"
      ]
     }
    ],
@@ -632,8 +632,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-04-03 18:07:00,360 - climada.entity.exposures.base - INFO - Matching 12472 exposures with 153222 centroids.\n",
-      "2019-04-03 18:07:02,341 - climada.engine.impact - INFO - Calculating damage for 12472 assets (>0) and 6 events.\n"
+      "2019-04-03 19:42:05,307 - climada.entity.exposures.base - INFO - Matching 12472 exposures with 153222 centroids.\n",
+      "2019-04-03 19:42:07,183 - climada.engine.impact - INFO - Calculating damage for 12472 assets (>0) and 6 events.\n"
      ]
     }
    ],
@@ -660,7 +660,7 @@
      "data": {
       "text/plain": [
        "(<Figure size 288x288 with 1 Axes>,\n",
-       " [<matplotlib.axes._subplots.AxesSubplot at 0x1a2f153d68>])"
+       " [<matplotlib.axes._subplots.AxesSubplot at 0x1a2ebbf048>])"
       ]
      },
      "execution_count": 10,
@@ -729,26 +729,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-04-03 18:07:02,462 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
+      "2019-04-03 19:42:07,315 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
       " Description: \n",
-      "2019-04-03 18:07:02,462 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
-      "2019-04-03 18:07:02,463 - climada.entity.exposures.base - INFO - Setting if_ to default impact functions ids 1.\n",
-      "2019-04-03 18:07:02,465 - climada.entity.exposures.base - INFO - centr_ not set.\n",
-      "2019-04-03 18:07:02,465 - climada.entity.exposures.base - INFO - deductible not set.\n",
-      "2019-04-03 18:07:02,466 - climada.entity.exposures.base - INFO - cover not set.\n",
-      "2019-04-03 18:07:02,467 - climada.entity.exposures.base - INFO - category_id not set.\n",
-      "2019-04-03 18:07:02,467 - climada.entity.exposures.base - INFO - region_id not set.\n",
-      "2019-04-03 18:07:02,468 - climada.entity.exposures.base - INFO - geometry not set.\n",
-      "2019-04-03 18:07:02,468 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
-      "2019-04-03 18:07:02,928 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n",
-      "2019-04-03 18:07:03,917 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n"
+      "2019-04-03 19:42:07,315 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
+      "2019-04-03 19:42:07,316 - climada.entity.exposures.base - INFO - Setting if_ to default impact functions ids 1.\n",
+      "2019-04-03 19:42:07,318 - climada.entity.exposures.base - INFO - centr_ not set.\n",
+      "2019-04-03 19:42:07,319 - climada.entity.exposures.base - INFO - deductible not set.\n",
+      "2019-04-03 19:42:07,321 - climada.entity.exposures.base - INFO - cover not set.\n",
+      "2019-04-03 19:42:07,322 - climada.entity.exposures.base - INFO - category_id not set.\n",
+      "2019-04-03 19:42:07,323 - climada.entity.exposures.base - INFO - region_id not set.\n",
+      "2019-04-03 19:42:07,324 - climada.entity.exposures.base - INFO - geometry not set.\n",
+      "2019-04-03 19:42:07,324 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
+      "2019-04-03 19:42:07,942 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n",
+      "2019-04-03 19:42:08,902 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "(<Figure size 648x936 with 2 Axes>,\n",
-       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a28e264e0>]],\n",
+       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a1c0e8d30>]],\n",
        "       dtype=object))"
       ]
      },
