add new sid attribute

--- a/script/tutorial/climada_hazard_TropCyclone.ipynb
+++ b/script/tutorial/climada_hazard_TropCyclone.ipynb
@@ -29,6 +29,7 @@
     "    - environmental_pressure\n",
     "    - max_sustained_wind_unit (attrs)\n",
     "    - central_pressure_unit (attrs)\n",
+    "    - sid (attrs)\n",
     "    - name (attrs)\n",
     "    - orig_event_flag (attrs)\n",
     "    - data_provider (attrs)\n",
