integrate GPW v4.11 compatibility

--- a/script/tutorial/climada_entity_LitPop.ipynb
+++ b/script/tutorial/climada_entity_LitPop.ipynb
@@ -14,8 +14,10 @@
     "- year 2012 and 2016: https://earthobservatory.nasa.gov/Features/NightLights (15 arcsec resolution (~500m))\n",
     "\n",
     "The gridded population count data used are the following:\n",
-    "- Gridded Population of the World (GPW), v4: Population Count, v4.10 (2000, 2005, 2010, 2015, 2020)\n",
-    "http://sedac.ciesin.org/data/set/gpw-v4-population-count-rev10\n",
+    "- Gridded Population of the World (GPW), v4: Population Count, v4.10, v4.11 or later versions (2000, 2005, 2010, 2015, 2020)\n",
+    "http://sedac.ciesin.columbia.edu/data/collection/gpw-v4/sets/browse\n",
+    "(i.e. http://sedac.ciesin.org/data/set/gpw-v4-population-count-rev10 or \n",
+    "http://sedac.ciesin.org/data/set/gpw-v4-population-count-rev11 etc.)\n",
     "The population data from GWP needs to be downloaded manually as TIFF from this site and placed in the system data folder of climada, i.e.: climada_python/data/system/gpw_v4_population_count_rev10_2015_30_sec.tif\n",
     "Always the GPW file of the year closest to the target year is required.\n",
     "All other required data is acquired automatically.\n",
@@ -122,8 +124,8 @@
     "ent.set_country('CHE')\n",
     "\n",
     "\"\"\" In case you encounter an error here, because the GPW data is missing: The gridded population count data used are the following:\n",
-    "- Gridded Population of the World (GPW), v4: Population Count, v4.10 (2000, 2005, 2010, 2015, 2020).\n",
-    "http://sedac.ciesin.org/data/set/gpw-v4-population-count-rev10\n",
+    "- Gridded Population of the World (GPW), v4: Population Count, v4.10 or later (2000, 2005, 2010, 2015, 2020).\n",
+    "http://sedac.ciesin.columbia.edu/data/collection/gpw-v4/sets/browse\n",
     "The population data from GWP needs to be downloaded manually as TIFF\n",
     "from this site and placed in the system data folder of climada,\n",
     "i.e.: climada_python/data/system/gpw_v4_population_count_rev10_2015_30_sec.tif\n",
