update tutorial: direct link to GPW population data

--- a/script/tutorial/climada_entity_LitPop.ipynb
+++ b/script/tutorial/climada_entity_LitPop.ipynb
@@ -31,7 +31,9 @@
     "![Screenshot%202019-04-18%20at%2010.52.04.png](attachment:Screenshot%202019-04-18%20at%2010.52.04.png)\n",
     "The population data from GWP needs to be downloaded manually as TIFF from this site and placed in the system data folder of climada, i.e.: climada_python/data/system/gpw_v4_population_count_rev11_2015_30_sec.tif.\n",
     "\n",
-    "Direct download links, i.e.:\n",
+    "Direct download links are avilable, also for older versions, i.e.:\n",
+    "http://sedac.ciesin.columbia.edu/downloads/data/gpw-v4/gpw-v4-population-count-rev10/gpw-v4-population-count-rev10_2015_30_sec_tif.zip, \n",
+    "or: \n",
     "http://sedac.ciesin.columbia.edu/downloads/data/gpw-v4/gpw-v4-population-count-rev11/gpw-v4-population-count-rev11_2015_30_sec_tif.zip\n",
     "\n",
     "All other required data is acquired automatically.\n",
