add comment on multiprocess executation

--- a/doc/tutorial/climada_hazard_TropCyclone.ipynb
+++ b/doc/tutorial/climada_hazard_TropCyclone.ipynb
@@ -58,8 +58,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-05-16 22:01:22,903 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n",
-      "2019-05-16 22:01:27,675 - climada.hazard.tc_tracks - INFO - Reading 2017242N16333: IRMA\n"
+      "2019-05-16 22:07:25,528 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n",
+      "2019-05-16 22:07:30,009 - climada.hazard.tc_tracks - INFO - Reading 2017242N16333: IRMA\n"
      ]
     },
     {
@@ -74,63 +74,63 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-05-16 22:01:31,974 - climada.hazard.tc_tracks - INFO - Reading 1993162N10245: ADRIAN\n",
-      "2019-05-16 22:01:32,184 - climada.hazard.tc_tracks - INFO - Reading 1993169N13265: BEATRIZ\n",
-      "2019-05-16 22:01:32,406 - climada.hazard.tc_tracks - INFO - Reading 1993178N14265: NOT_NAMED\n",
-      "2019-05-16 22:01:32,540 - climada.hazard.tc_tracks - WARNING - Skipping 1993178N14265. No usable data.\n",
-      "2019-05-16 22:01:32,542 - climada.hazard.tc_tracks - INFO - Reading 1993186N13262: CALVIN\n",
-      "2019-05-16 22:01:32,751 - climada.hazard.tc_tracks - INFO - Reading 1993196N11241: DORA\n",
-      "2019-05-16 22:01:32,967 - climada.hazard.tc_tracks - INFO - Reading 1993197N11247: EUGENE\n",
-      "2019-05-16 22:01:33,194 - climada.hazard.tc_tracks - INFO - Reading 1993221N12216: KEONI\n",
-      "2019-05-16 22:01:33,340 - climada.hazard.tc_tracks - WARNING - Skipping 1993221N12216. No usable data.\n",
-      "2019-05-16 22:01:33,342 - climada.hazard.tc_tracks - INFO - Reading 1993221N13256: FERNANDA\n",
-      "2019-05-16 22:01:33,602 - climada.hazard.tc_tracks - INFO - Reading 1993223N07185: NOT_NAMED\n",
-      "2019-05-16 22:01:33,768 - climada.hazard.tc_tracks - WARNING - Skipping 1993223N07185. No usable data.\n",
-      "2019-05-16 22:01:33,771 - climada.hazard.tc_tracks - INFO - Reading 1993227N15258: GREG\n",
-      "2019-05-16 22:01:34,027 - climada.hazard.tc_tracks - INFO - Reading 1993229N13265: HILARY\n",
-      "2019-05-16 22:01:34,242 - climada.hazard.tc_tracks - INFO - Reading 1993233N13260: IRWIN\n",
-      "2019-05-16 22:01:34,452 - climada.hazard.tc_tracks - INFO - Reading 1993241N14264: JOVA\n",
-      "2019-05-16 22:01:34,766 - climada.hazard.tc_tracks - INFO - Reading 1993249N12253: KENNETH\n",
-      "2019-05-16 22:01:34,985 - climada.hazard.tc_tracks - INFO - Reading 1993252N11265: LIDIA\n",
-      "2019-05-16 22:01:35,222 - climada.hazard.tc_tracks - INFO - Reading 1993273N11245: MAX\n",
-      "2019-05-16 22:01:35,449 - climada.hazard.tc_tracks - INFO - Reading 1993276N13249: NORMA\n",
-      "2019-05-16 22:01:35,696 - climada.hazard.tc_tracks - INFO - Reading 1993285N12192: HATTIE\n",
-      "2019-05-16 22:01:35,871 - climada.hazard.tc_tracks - WARNING - Skipping 1993285N12192. No usable data.\n",
-      "2019-05-16 22:01:35,873 - climada.hazard.tc_tracks - INFO - Reading 1993285N16239: NOT_NAMED\n",
-      "2019-05-16 22:01:36,026 - climada.hazard.tc_tracks - WARNING - Skipping 1993285N16239. No usable data.\n",
-      "2019-05-16 22:01:36,029 - climada.hazard.tc_tracks - INFO - Reading 1994169N13240: ALETTA\n",
-      "2019-05-16 22:01:36,254 - climada.hazard.tc_tracks - INFO - Reading 1994178N16248: BUD\n",
-      "2019-05-16 22:01:36,498 - climada.hazard.tc_tracks - INFO - Reading 1994180N12255: CARLOTTA\n",
-      "2019-05-16 22:01:36,745 - climada.hazard.tc_tracks - INFO - Reading 1994190N13239: DANIEL\n",
-      "2019-05-16 22:01:36,985 - climada.hazard.tc_tracks - INFO - Reading 1994197N09229: EMILIA\n",
-      "2019-05-16 22:01:37,278 - climada.hazard.tc_tracks - INFO - Reading 1994200N13235: FABIO\n",
-      "2019-05-16 22:01:37,505 - climada.hazard.tc_tracks - INFO - Reading 1994202N11238: GILMA\n",
-      "2019-05-16 22:01:37,831 - climada.hazard.tc_tracks - INFO - Reading 1994212N11240: LI\n",
-      "2019-05-16 22:01:38,044 - climada.hazard.tc_tracks - WARNING - Skipping 1994212N11240. No usable data.\n",
-      "2019-05-16 22:01:38,048 - climada.hazard.tc_tracks - INFO - Reading 1994219N19252: HECTOR\n",
-      "2019-05-16 22:01:38,327 - climada.hazard.tc_tracks - INFO - Reading 1994221N15215: NOT_NAMED\n",
-      "2019-05-16 22:01:38,501 - climada.hazard.tc_tracks - WARNING - Skipping 1994221N15215. No usable data.\n",
-      "2019-05-16 22:01:38,504 - climada.hazard.tc_tracks - INFO - Reading 1994222N11267: JOHN\n",
-      "2019-05-16 22:01:38,751 - climada.hazard.tc_tracks - INFO - Reading 1994223N15253: ILEANA\n",
-      "2019-05-16 22:01:39,004 - climada.hazard.tc_tracks - INFO - Reading 1994224N16240: NOT_NAMED\n",
-      "2019-05-16 22:01:39,140 - climada.hazard.tc_tracks - WARNING - Skipping 1994224N16240. No usable data.\n",
-      "2019-05-16 22:01:39,142 - climada.hazard.tc_tracks - INFO - Reading 1994241N14236: KRISTY\n",
-      "2019-05-16 22:01:39,413 - climada.hazard.tc_tracks - INFO - Reading 1994247N18251: LANE\n",
-      "2019-05-16 22:01:39,766 - climada.hazard.tc_tracks - INFO - Reading 1994249N11200: MELE\n",
-      "2019-05-16 22:01:39,908 - climada.hazard.tc_tracks - WARNING - Skipping 1994249N11200. No usable data.\n",
-      "2019-05-16 22:01:39,911 - climada.hazard.tc_tracks - INFO - Reading 1994249N21220: LANE\n",
-      "2019-05-16 22:01:40,138 - climada.hazard.tc_tracks - INFO - Reading 1994259N13244: MIRIAM\n",
-      "2019-05-16 22:01:40,345 - climada.hazard.tc_tracks - INFO - Reading 1994262N16249: NORMAN\n",
-      "2019-05-16 22:01:40,596 - climada.hazard.tc_tracks - INFO - Reading 1994265N13251: OLIVIA\n",
-      "2019-05-16 22:01:40,832 - climada.hazard.tc_tracks - INFO - Reading 1994268N15232: PAUL\n",
-      "2019-05-16 22:01:41,067 - climada.hazard.tc_tracks - INFO - Reading 1994282N17247: ROSA\n",
-      "2019-05-16 22:01:41,300 - climada.hazard.tc_tracks - INFO - Reading 1994294N13203: NONA\n",
-      "2019-05-16 22:01:41,437 - climada.hazard.tc_tracks - WARNING - Skipping 1994294N13203. No usable data.\n",
-      "2019-05-16 22:01:41,440 - climada.hazard.tc_tracks - INFO - Reading 1994295N25188: YURI\n",
-      "2019-05-16 22:01:41,574 - climada.hazard.tc_tracks - WARNING - Skipping 1994295N25188. No usable data.\n",
+      "2019-05-16 22:07:34,240 - climada.hazard.tc_tracks - INFO - Reading 1993162N10245: ADRIAN\n",
+      "2019-05-16 22:07:34,464 - climada.hazard.tc_tracks - INFO - Reading 1993169N13265: BEATRIZ\n",
+      "2019-05-16 22:07:34,664 - climada.hazard.tc_tracks - INFO - Reading 1993178N14265: NOT_NAMED\n",
+      "2019-05-16 22:07:34,809 - climada.hazard.tc_tracks - WARNING - Skipping 1993178N14265. No usable data.\n",
+      "2019-05-16 22:07:34,811 - climada.hazard.tc_tracks - INFO - Reading 1993186N13262: CALVIN\n",
+      "2019-05-16 22:07:35,022 - climada.hazard.tc_tracks - INFO - Reading 1993196N11241: DORA\n",
+      "2019-05-16 22:07:35,234 - climada.hazard.tc_tracks - INFO - Reading 1993197N11247: EUGENE\n",
+      "2019-05-16 22:07:35,449 - climada.hazard.tc_tracks - INFO - Reading 1993221N12216: KEONI\n",
+      "2019-05-16 22:07:35,596 - climada.hazard.tc_tracks - WARNING - Skipping 1993221N12216. No usable data.\n",
+      "2019-05-16 22:07:35,599 - climada.hazard.tc_tracks - INFO - Reading 1993221N13256: FERNANDA\n",
+      "2019-05-16 22:07:35,824 - climada.hazard.tc_tracks - INFO - Reading 1993223N07185: NOT_NAMED\n",
+      "2019-05-16 22:07:35,968 - climada.hazard.tc_tracks - WARNING - Skipping 1993223N07185. No usable data.\n",
+      "2019-05-16 22:07:35,971 - climada.hazard.tc_tracks - INFO - Reading 1993227N15258: GREG\n",
+      "2019-05-16 22:07:36,192 - climada.hazard.tc_tracks - INFO - Reading 1993229N13265: HILARY\n",
+      "2019-05-16 22:07:36,407 - climada.hazard.tc_tracks - INFO - Reading 1993233N13260: IRWIN\n",
+      "2019-05-16 22:07:36,629 - climada.hazard.tc_tracks - INFO - Reading 1993241N14264: JOVA\n",
+      "2019-05-16 22:07:36,905 - climada.hazard.tc_tracks - INFO - Reading 1993249N12253: KENNETH\n",
+      "2019-05-16 22:07:37,117 - climada.hazard.tc_tracks - INFO - Reading 1993252N11265: LIDIA\n",
+      "2019-05-16 22:07:37,338 - climada.hazard.tc_tracks - INFO - Reading 1993273N11245: MAX\n",
+      "2019-05-16 22:07:37,549 - climada.hazard.tc_tracks - INFO - Reading 1993276N13249: NORMA\n",
+      "2019-05-16 22:07:37,762 - climada.hazard.tc_tracks - INFO - Reading 1993285N12192: HATTIE\n",
+      "2019-05-16 22:07:37,907 - climada.hazard.tc_tracks - WARNING - Skipping 1993285N12192. No usable data.\n",
+      "2019-05-16 22:07:37,909 - climada.hazard.tc_tracks - INFO - Reading 1993285N16239: NOT_NAMED\n",
+      "2019-05-16 22:07:38,049 - climada.hazard.tc_tracks - WARNING - Skipping 1993285N16239. No usable data.\n",
+      "2019-05-16 22:07:38,052 - climada.hazard.tc_tracks - INFO - Reading 1994169N13240: ALETTA\n",
+      "2019-05-16 22:07:38,260 - climada.hazard.tc_tracks - INFO - Reading 1994178N16248: BUD\n",
+      "2019-05-16 22:07:38,474 - climada.hazard.tc_tracks - INFO - Reading 1994180N12255: CARLOTTA\n",
+      "2019-05-16 22:07:38,697 - climada.hazard.tc_tracks - INFO - Reading 1994190N13239: DANIEL\n",
+      "2019-05-16 22:07:38,899 - climada.hazard.tc_tracks - INFO - Reading 1994197N09229: EMILIA\n",
+      "2019-05-16 22:07:39,119 - climada.hazard.tc_tracks - INFO - Reading 1994200N13235: FABIO\n",
+      "2019-05-16 22:07:39,337 - climada.hazard.tc_tracks - INFO - Reading 1994202N11238: GILMA\n",
+      "2019-05-16 22:07:39,550 - climada.hazard.tc_tracks - INFO - Reading 1994212N11240: LI\n",
+      "2019-05-16 22:07:39,697 - climada.hazard.tc_tracks - WARNING - Skipping 1994212N11240. No usable data.\n",
+      "2019-05-16 22:07:39,699 - climada.hazard.tc_tracks - INFO - Reading 1994219N19252: HECTOR\n",
+      "2019-05-16 22:07:39,913 - climada.hazard.tc_tracks - INFO - Reading 1994221N15215: NOT_NAMED\n",
+      "2019-05-16 22:07:40,052 - climada.hazard.tc_tracks - WARNING - Skipping 1994221N15215. No usable data.\n",
+      "2019-05-16 22:07:40,055 - climada.hazard.tc_tracks - INFO - Reading 1994222N11267: JOHN\n",
+      "2019-05-16 22:07:40,291 - climada.hazard.tc_tracks - INFO - Reading 1994223N15253: ILEANA\n",
+      "2019-05-16 22:07:40,502 - climada.hazard.tc_tracks - INFO - Reading 1994224N16240: NOT_NAMED\n",
+      "2019-05-16 22:07:40,637 - climada.hazard.tc_tracks - WARNING - Skipping 1994224N16240. No usable data.\n",
+      "2019-05-16 22:07:40,639 - climada.hazard.tc_tracks - INFO - Reading 1994241N14236: KRISTY\n",
+      "2019-05-16 22:07:40,848 - climada.hazard.tc_tracks - INFO - Reading 1994247N18251: LANE\n",
+      "2019-05-16 22:07:41,149 - climada.hazard.tc_tracks - INFO - Reading 1994249N11200: MELE\n",
+      "2019-05-16 22:07:41,285 - climada.hazard.tc_tracks - WARNING - Skipping 1994249N11200. No usable data.\n",
+      "2019-05-16 22:07:41,287 - climada.hazard.tc_tracks - INFO - Reading 1994249N21220: LANE\n",
+      "2019-05-16 22:07:41,499 - climada.hazard.tc_tracks - INFO - Reading 1994259N13244: MIRIAM\n",
+      "2019-05-16 22:07:41,707 - climada.hazard.tc_tracks - INFO - Reading 1994262N16249: NORMAN\n",
+      "2019-05-16 22:07:41,911 - climada.hazard.tc_tracks - INFO - Reading 1994265N13251: OLIVIA\n",
+      "2019-05-16 22:07:42,134 - climada.hazard.tc_tracks - INFO - Reading 1994268N15232: PAUL\n",
+      "2019-05-16 22:07:42,344 - climada.hazard.tc_tracks - INFO - Reading 1994282N17247: ROSA\n",
+      "2019-05-16 22:07:42,562 - climada.hazard.tc_tracks - INFO - Reading 1994294N13203: NONA\n",
+      "2019-05-16 22:07:42,697 - climada.hazard.tc_tracks - WARNING - Skipping 1994294N13203. No usable data.\n",
+      "2019-05-16 22:07:42,699 - climada.hazard.tc_tracks - INFO - Reading 1994295N25188: YURI\n",
+      "2019-05-16 22:07:42,835 - climada.hazard.tc_tracks - WARNING - Skipping 1994295N25188. No usable data.\n",
       "Number of tracks: 32\n",
-      "2019-05-16 22:01:45,723 - climada.hazard.tc_tracks - INFO - Reading 2007314N10093: SIDR\n",
-      "2019-05-16 22:01:49,541 - climada.hazard.tc_tracks - INFO - Reading 2016138N10081: ROANU\n"
+      "2019-05-16 22:07:46,391 - climada.hazard.tc_tracks - INFO - Reading 2007314N10093: SIDR\n",
+      "2019-05-16 22:07:50,507 - climada.hazard.tc_tracks - INFO - Reading 2016138N10081: ROANU\n"
      ]
     },
     {
@@ -255,19 +255,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-05-16 22:01:52,478 - climada.hazard.tc_tracks - INFO - Computing 5 synthetic tracks.\n",
-      "2019-05-16 22:01:54,565 - climada.hazard.tc_tracks - DEBUG - No historical track of category Tropical Depression with landfall. Decay parameters from category Hurrican Cat. 3 taken.\n",
-      "2019-05-16 22:01:54,566 - climada.hazard.tc_tracks - DEBUG - No historical track of category Tropical Storm with landfall. Decay parameters from category Hurrican Cat. 3 taken.\n",
-      "2019-05-16 22:01:54,566 - climada.hazard.tc_tracks - DEBUG - No historical track of category Hurrican Cat. 1 with landfall. Decay parameters from category Hurrican Cat. 3 taken.\n",
-      "2019-05-16 22:01:54,567 - climada.hazard.tc_tracks - DEBUG - No historical track of category Hurrican Cat. 2 with landfall. Decay parameters from category Hurrican Cat. 3 taken.\n",
-      "2019-05-16 22:01:54,567 - climada.hazard.tc_tracks - DEBUG - No historical track of category Hurrican Cat. 4 with landfall. Decay parameters from category Hurrican Cat. 5 taken.\n"
+      "2019-05-16 22:07:54,136 - climada.hazard.tc_tracks - INFO - Computing 5 synthetic tracks.\n",
+      "2019-05-16 22:07:56,393 - climada.hazard.tc_tracks - DEBUG - No historical track of category Tropical Depression with landfall. Decay parameters from category Hurrican Cat. 3 taken.\n",
+      "2019-05-16 22:07:56,393 - climada.hazard.tc_tracks - DEBUG - No historical track of category Tropical Storm with landfall. Decay parameters from category Hurrican Cat. 3 taken.\n",
+      "2019-05-16 22:07:56,394 - climada.hazard.tc_tracks - DEBUG - No historical track of category Hurrican Cat. 1 with landfall. Decay parameters from category Hurrican Cat. 3 taken.\n",
+      "2019-05-16 22:07:56,395 - climada.hazard.tc_tracks - DEBUG - No historical track of category Hurrican Cat. 2 with landfall. Decay parameters from category Hurrican Cat. 3 taken.\n",
+      "2019-05-16 22:07:56,397 - climada.hazard.tc_tracks - DEBUG - No historical track of category Hurrican Cat. 4 with landfall. Decay parameters from category Hurrican Cat. 5 taken.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "(<Figure size 648x936 with 1 Axes>,\n",
-       " <cartopy.mpl.geoaxes.GeoAxesSubplot at 0x1a29fad278>)"
+       " <cartopy.mpl.geoaxes.GeoAxesSubplot at 0x1a1f485160>)"
       ]
      },
      "execution_count": 3,
@@ -344,14 +344,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-05-16 22:01:57,158 - climada.hazard.tc_tracks - INFO - Interpolating 6 tracks to 1h time steps.\n"
+      "2019-05-16 22:07:58,986 - climada.hazard.tc_tracks - INFO - Interpolating 6 tracks to 1h time steps.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "(<Figure size 648x936 with 1 Axes>,\n",
-       " <cartopy.mpl.geoaxes.GeoAxesSubplot at 0x1a2920efd0>)"
+       " <cartopy.mpl.geoaxes.GeoAxesSubplot at 0x1a20671c18>)"
       ]
      },
      "execution_count": 5,
@@ -465,17 +465,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-05-16 22:02:00,992 - climada.hazard.centroids.centr - DEBUG - Setting dist_coast 3822 points.\n",
-      "2019-05-16 22:02:01,359 - climada.hazard.trop_cyclone - INFO - Mapping 6 tracks to 3822 centroids.\n",
-      "2019-05-16 22:02:06,327 - climada.hazard.trop_cyclone - DEBUG - Append events.\n",
-      "2019-05-16 22:02:06,343 - climada.hazard.trop_cyclone - DEBUG - Compute frequency.\n"
+      "2019-05-16 22:08:03,175 - climada.hazard.centroids.centr - DEBUG - Setting dist_coast 3822 points.\n",
+      "2019-05-16 22:08:03,508 - climada.hazard.trop_cyclone - INFO - Mapping 6 tracks to 3822 centroids.\n",
+      "2019-05-16 22:08:08,918 - climada.hazard.trop_cyclone - DEBUG - Append events.\n",
+      "2019-05-16 22:08:08,933 - climada.hazard.trop_cyclone - DEBUG - Compute frequency.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "(<Figure size 648x936 with 2 Axes>,\n",
-       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a2c1642e8>]],\n",
+       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a21e89eb8>]],\n",
        "       dtype=object))"
       ]
      },
