update references in LitPop tutorial

--- a/doc/tutorial/climada_entity_LitPop.ipynb
+++ b/doc/tutorial/climada_entity_LitPop.ipynb
@@ -13,18 +13,20 @@
     "\n",
     "This class is a data model of economic exposure. It models countries' gridded exposure by interpolating an macroeconomic indicator through the product of night light intensities and gridded population count for a specific year. Asset value is distributed to the grid proportzional to LitPop. LitPop at each pixel is calculated in the script as:\n",
     "\n",
+    "\n",
     "$Lit^mPop^n = Lit^m * Pop^n$, with $exponents = [m, n] \\in \\N_0$ (Default values are $m=n=1$).\n",
     "\n",
-    "The night light images used are the following:\n",
+    "\n",
+    "The night light images used are the following (NASA Black Marble):\n",
     "- year 2012 and 2016: https://earthobservatory.nasa.gov/Features/NightLights (15 arcsec resolution (~500m))\n",
     "\n",
     "The gridded population count data used are the following:\n",
     "- Gridded Population of the World (GPW), v4: Population Count, v4.10, v4.11 or later versions (2000, 2005, 2010, 2015, 2020)\n",
     "http://sedac.ciesin.columbia.edu/data/collection/gpw-v4/sets/browse\n",
-    "(i.e. http://sedac.ciesin.org/data/set/gpw-v4-population-count-rev10 or \n",
-    "http://sedac.ciesin.org/data/set/gpw-v4-population-count-rev11 etc.)\n",
+    "To access older versions (i.e. v4.10 that was used for the published data set), please see SEDAC's Beta site:\n",
+    "https://beta.sedac.ciesin.columbia.edu/data/collection/gpw-v4/sets/browse\n",
     "\n",
-    "Always the GPW file of the year closest to the target year is required.\n",
+    "The GPW file of the year closest to the target year is required.\n",
     "To download GPW data you need to register on the SEDAC website (for free).\n",
     "Then you can access the download site, i.e.: http://sedac.ciesin.columbia.edu/data/set/gpw-v4-population-count-rev11/data-download.\n",
     "There, choose the settings as shown, ticking the box of the years you need:\n",
@@ -54,8 +56,12 @@
     "\n",
     "*NOTE / Downloading existing LitPop exposure data:*\n",
     "\n",
-    "Readily computed LitPop exposure data, distributing produced capital of 2014 at a resolution of 30 arcsec can be downloaded from the ETH Research Repository: https://doi.org/10.3929/ethz-b-000331316.\n",
-    "The dataset contains gridded data for more than 200 countries as CSV files. [These can be imported into Python using the Exposures class, i.e. *Exposures(pd.read_csv(file_name))*]\n"
+    "Readily computed LitPop asset exposure data based on $Lit^1Pop^1$ for 224 countries, distributing produced capital / non-financial wealth of 2014 at a resolution of 30 arcsec can be downloaded from the ETH Research Repository: https://doi.org/10.3929/ethz-b-000331316.\n",
+    "The dataset contains gridded data for more than 200 countries as CSV files. [These can be imported into Python using the Exposures class, i.e. *Exposures(pd.read_csv(file_name))*]\n",
+    "\n",
+    "\n",
+    "Please refer to and quote the related publication if you are using LitPop exposure data in your studies:\n",
+    "https://doi.org/10.5194/essd-2019-189.\n"
    ]
   },
   {
